--- a/app/src/main/res/layout/activity_todolist_manager.xml
+++ b/app/src/main/res/layout/activity_todolist_manager.xml
@@ -10,7 +10,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listView"
+        android:id="@+id/list"
         android:padding="5dp"
         android:background="@drawable/border"/>
 
